# LuaIntegration

./: CMakeLists.txt  LICENSE  README.md
include/: Engine.h  LightingSystem.h  LuaManager.h  VulkanRenderer.h  VulkanRendererHelpers.h
scripts/: day_night_cycle.lua  lighting_demo.lua
shaders/: lighting.frag  lighting.vert
src/: Engine.cpp  LightingSystem.cpp  LuaManager.cpp  VulkanRenderer.cpp  VulkanRendererHelpers.cpp
